--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require": {
         "twig/twig": "^3.0"
+    },
+
+    "autoload": {
+        "classmap": [      
+        "library"
+        ]
     }
+     
 }
